Update and pushed from home

--- a/CSS/CSS.CSS.CSS.CSS
+++ b/CSS/CSS.CSS.CSS.CSS
@@ -57,7 +57,7 @@ p {
 
 /* links */
 
-a{
+a {
   text-decoration: none;
 }
 .link-arrow {
@@ -66,8 +66,8 @@ a{
   font-size: 2rems;
   font-weight: bold;
 }
-.link-arrow::after{
-  content: '-->';
+.link-arrow::after {
+  content: "-->";
   margin-left: 5px;
   transition: margin 0.15s;
 }
@@ -75,7 +75,46 @@ a{
   margin-left: 10px;
 }
 @media screen and (min-width: 1024px) {
-  .link-arrow{
+  .link-arrow {
     font-size: 1.5rem;
   }
+}
+/* Badges */
+.badge {
+  border-radius: 20px;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background: var(--color-primary);
+  color: #fff;
+}
+
+.badge-secondary {
+  background: vsr(--color-secondary);
+  color: #fff;
+}
+
+.badge--small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+  .badge--small {
+    font-size: 1.2rem;
+  }
+}
+/* Lists */
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+.list--inline {
 }
