Stuff kinda broken

--- a/CSS/CSS.CSS.CSS.CSS
+++ b/CSS/CSS.CSS.CSS.CSS
@@ -130,3 +130,12 @@ margin-right: 2rem;
 .list--tick .list_item{
   padding-left: 0.5rem;
 }
+/* icons */
+.icon {
+  width: 40px;
+  height: 40px
+}
+
+.icon--primary {
+  fill: var(--color-primary)
+}
