--- a/CSS/CSS.CSS.CSS.CSS
+++ b/CSS/CSS.CSS.CSS.CSS
@@ -213,3 +213,23 @@ a {
   background: var(--color-headings);
   color: #fff;
 }
+
+/* Inputs */
+.input{
+  padding: 1.5rem 3.5rem;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  outline: 0;
+  color: var(--color-headings);
+  font-size: 2rem;
+}
+
+::placeholder{
+  color: #cdcbd7;
+}
+
+@media screen and (min-width: 1024px){
+  .input{
+    font-size: 1.5rem;
+  }
+}
