--- a/CSS/CSS.CSS.CSS.CSS
+++ b/CSS/CSS.CSS.CSS.CSS
@@ -12,6 +12,8 @@ html {
   --color-accent: #ff3400;
   --color-headings: #1b0760;
   --color-body: #918ca4;
+  --color-border: #ccc;
+  --border-radius:30px;
 }
 body {
   font-family: inter, Arial, Helvetica, sans-serif;
@@ -217,8 +219,8 @@ a {
 /* Inputs */
 .input{
   padding: 1.5rem 3.5rem;
-  border: 1px solid #ccc;
-  border-radius: 30px;
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
   outline: 0;
   color: var(--color-headings);
   font-size: 2rem;
@@ -228,6 +230,24 @@ a {
   color: #cdcbd7;
 }
 
+
+
+.input-group{
+  border: 1px solid var(--color-border);
+  border-radius: var(--border-radius);
+  display: flex;
+}
+.input-group .input {
+  border: 0;
+  flex-grow: 1;
+  padding: 1.5rem 1rem;
+}
+
+.input-group .btn{
+  margin: 4px;
+}
+/* TODO:Put in componets? */
+/* have not put in componets yet!!!!!! */
 @media screen and (min-width: 1024px){
   .input{
     font-size: 1.5rem;
