--- a/Components/icons.HTML
+++ b/Components/icons.HTML
@@ -1,5 +1,5 @@
 <span class="icon-container">
-  <svg class="icon" viewBox="0 0 32 32">
+  <svg class="icon icon--primary">
     <use xlink:href="Images/sprite.svg#wordpress"></use>
   </svg>
 </span>
